# calculator

./: CMakeLists.txt  main.cpp
src/: calc.cpp  calc.h  input.cpp  input.h
